# Wideo_Peli

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
doc/: README.md
evaluation/: pasi.md
plan/: README.md
src/: .gitignore  CMakeCache.txt  Grid.cpp  Grid.hpp  Makefile  Map.cpp  Map.hpp  Menu.cpp  README.md  Tile.hpp  a.out  boost.cpp  build.sh  buildCarTest.bat  buildClient.sh  buildClientWin.bat  buildServer.sh  buildServerWin.bat  buildWin.bat  build_instructions_for_windows.txt  cartest.cpp  cmake_install.cmake  compile_commands.json  main-test.cpp  main.cpp  network.cpp  network.hpp  player.hpp  projectile.cpp  runClientAutoCon.sh  runClientAutoConWin.bat  runServer.sh  runServerLocal.sh  runServerWin.bat  runServerWinLocal.bat  runTests.sh  runTestsWin.bat  server.cpp  sfml-app  tar.cpp  (+1 more)
src/assets/: MAPEDIT_INSTRUCTIONS.txt  buildTools.sh  buildToolsWin.bat  buildtools.bat  collisionMaker.cpp  map1.map  map2.map  map2.map.bak  map3.map  map3.srv  map3b.srv  map4.map  map4.srv  map4.srv.bak  map5.map  map5.srv  mapMaker.cpp  srvMapMaker.cpp
